--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,12 +9,13 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        tools:layout_editor_absoluteX=""
+        tools:layout_editor_absoluteY="">
 
         <TableLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAlignment="center"
+            android:layout_height="1000dp"
             tools:ignore="MissingConstraints">
 
             <TextView
@@ -39,7 +40,7 @@
 
 
             <TableRow
-                android:layout_width="match_parent"
+                android:layout_width="328dp"
                 android:layout_height="match_parent"
                 android:layout_marginLeft="60px">
 
@@ -79,7 +80,7 @@
             </TableRow>
 
             <TableRow
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_marginLeft="60px">
 
@@ -124,7 +125,7 @@
             </TableRow>
 
             <TableRow
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_marginLeft="60px">
 
@@ -214,7 +215,7 @@
 
             <TableRow
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="112dp"
                 android:layout_marginLeft="60px">
 
                 <Button
